# Desktop-Market-Terminal

./: .gitignore  AGENTS.md  README.md  index.html  package.json  test_hood_price.py  tsconfig.json
.github/workflows/: release.yml
backend/: connection_pool.py  dailyiq_provider.py  db_utils.py  gap_scanner.py  historical.py  ibkr-watchdog.service  ibkr_utils.py  ibkr_watchdog.py  main.py  options_collector.py  options_ib.py  playbook_analyzer.py  prefetch.py  pyproject.toml  requirements.txt  schema.py  score_worker.py  subscriptions.py  technicals.py  test_sqlite_aapl.py  test_watchlist_quotes.py  worker_valuations.py  worker_watchlist.py  yahoo_provider.py
backend/tests/: env_loader.py  test_52w_hl.py  test_bid_ask_upsert.py  test_chart_intents.py  test_dailyiq_endpoints.py  test_finnhub_fallback.py  test_heatmap_api.py  test_historical_deep.py  test_ibkr_client_ids.py  test_intraday_backfill_settings.py  test_liquidity_sweep_detector.py  test_mu_dailyiq_fundamentals.py  test_options_api.py  test_options_collector.py  test_options_collector_policy.py  test_portfolio_manual.py  test_portfolio_manual_api.py  test_schema_init.py  test_score_worker_read_scores.py  test_tws_intraday_depth.py  test_valuation_scheduler.py  test_yahoo_fundamentals.py  test_yahoo_historical_policy.py
data/: etfs.json  market.db-shm  market.db-wal  tickers.json
init/: fetch_aapl.py
public/: test-window.html
scripts/: setup-backend.sh  test_aapl_options.py  test_dailyiq_1m_bars.py
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.release.conf.json
src-tauri/resources/: app-config.json
src-tauri/src/: main.rs
src/chart/: constants.ts  customStrategies.ts  customStrategyStorage.ts  mock-data.ts  presetStrategies.ts  (+1 more)
(+106 files in other folders)
