[project]
name = "dailyiq-backend"
version = "0.1.0"
description = "DailyIQ Backtesting Bench - Python backend"
requires-python = ">=3.11,<3.13"
dependencies = [
    "ib_insync",
    "fastapi",
    "uvicorn[standard]",
    "websockets",
    "yahooquery",
    "pandas",
    "numpy",
    "scipy",
]

[tool.uv]
python-preference = "only-managed"
