[package]
name = "dailyiq-bench"
version = "0.2.3"
description = "DailyIQ desktop app"
authors = ["Kunal Jha"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "updater", "dialog-save", "shell-execute", "shell-sidecar", "window-all", "os-all", "fs-create-dir", "fs-exists", "fs-write-file", "path-all", "fs-read-file", "shell-open", "dialog-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
